# superlinear-parallelism-experiment

./: CMakeLists.txt  README.md
logs/: histRUN  histogram.m  run_hist.sh  search
logs/analysis_bin/: hist  matlab.mat  readme.txt  search
logs/results1/: N1D1T3W7_mean18.021_std23.469.eps  N1D1T3W7_mean18.021_std23.469.fig  N1D2T3W7_mean70.873_std46.742.eps  N1D2T3W7_mean70.873_std46.742.fig  N1D3T3W7_mean177.06_std231.30.eps  N1D3T3W7_mean177.06_std231.30.fig  N1D4T3W7_mean3471.7_std1062.7.eps  N1D4T3W7_mean3471.7_std1062.7.fig  N1D5T3W7_mean21849_std14147.eps  N1D5T3W7_mean21849_std14147.fig  N2D2T3W7_mean25.823_std22.020.eps  N2D2T3W7_mean25.823_std22.020.fig
logs/results2/: N1D2T7W21_mean963.90_std488.98.eps  N1D2T7W21_mean963.90_std488.98.fig  N2D2T7W21_mean302.83_std267.35.eps  N2D2T7W21_mean302.83_std267.35.fig  N3D2T7W21_mean147.52_std154.49.fig
logs/results3_nexp2e5/: N10D2T10W29_mean61.286_std44.909.eps  N10D2T10W29_mean61.286_std44.909.fig  N1D2T10W29_mean2.1498e3_std910.18.eps  N20D2T10W29_mean34.956_std14.955.eps  N2D2T10W29_mean752.71_std555.89.eps  N2D2T10W29_mean752.71_std555.89.fig  N3D2T10W29_mean367.48_std346.75.eps  N4D2T10W29_mean219.32_std226.86.eps  N7D2T10W29_mean92.359_std85.665.eps
logs/results4_D3/: N16D3T10W29_mean345.55_std642.65.eps  N16D3T10W29_mean345.55_std642.65.fig  N32D3T10W29_mean103.35_std145.36.eps  N32D3T10W29_mean103.35_std145.36.fig  N4D3T10W29_mean6.0270e3_std5.084e3.eps  N4D3T10W29_mean6.0270e3_std5.084e3.fig  N8D3T10W29_mean1.574e3_std2.131e3.eps  (+1 more)
src/: randomWalks.cpp  searchSim.cpp
src/scripts/: hist.sh  (+1 more)
(+5 files in other folders)
